--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@mui/material": "^6.1.9",
     "@storybook/cli": "^8.4.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
@@ -54,6 +55,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
     "prettier": "^3.4.1",
+    "sass": "^1.81.0",
     "storybook": "^8.4.6",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.2",
